# sdltest

./: .gitignore  build.bat  main.cpp  meson.build
res/: red.tif
subprojects/: libjpeg.wrap  libpng.wrap  ogg.wrap  sdl2.wrap  sdl2_mixer.wrap  vorbis.wrap  zlib.wrap
